// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en <GiftExpertApp /> Crear snapshot para detectar cambios en el codigo 1`] = `
<Fragment>
  <h2
    className="animate__fadeInDownBig animate__fadeOutDownBig"
  >
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`pruebas en <GiftExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2
    className="animate__fadeInDownBig animate__fadeOutDownBig"
  >
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Messi"
      key="Messi0"
    />
    <GifGrid
      category="Programador"
      key="Programador1"
    />
  </ol>
</Fragment>
`;
